fixed alignment of suggestion flairs

--- a/obsidian.css
+++ b/obsidian.css
@@ -891,7 +891,7 @@ textarea:hover {
   font-size: var(--font-prompt-size);
 }
 .prompt .prompt-results .suggestion-item {
-  padding: 8px 10px;
+  padding: 8px 10px 8px 34px;
   font-size: var(--font-prompt-size);
   margin-right: 2px;
 }
@@ -942,7 +942,7 @@ textarea:hover {
   max-height: 450px;
 }
 .suggestion-container .suggestion .suggestion-item {
-  padding: 8px 10px;
+  padding: 8px 10px 8px 34px;
   font-size: var(--font-preview-size);
   margin-right: 2px;
 }
