--- a/src/modules/ui/quick-open.scss
+++ b/src/modules/ui/quick-open.scss
@@ -10,7 +10,7 @@
 
   .prompt-results {
     .suggestion-item {
-      padding: 8px 10px;
+      padding: 8px 10px 8px 34px;
       font-size: var(--font-prompt-size);
       margin-right: 2px;
 
