--- a/src/modules/ui/suggestions.scss
+++ b/src/modules/ui/suggestions.scss
@@ -8,7 +8,7 @@
     max-height: 450px;
 
     .suggestion-item {
-      padding: 8px 10px;
+      padding: 8px 10px 8px 34px;
       font-size: var(--font-preview-size);
       margin-right: 2px;
 
